base/canvas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canvas-service
  labels:
    app: canvas
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: canvas
