base/canvas/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canvas-ingress
  labels:
    app: canvas
spec:
  ingressClassName: nginx
  rules:
  - host: canvas.vatusa.dev
    http:
      paths:
      - backend:
          service:
            name: canvas-service
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - canvas.vatusa.dev
    secretName: canvas-vatusa-dev-tls
